// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Graphql API shoud save an artist 1`] = `
Object {
  "createArtist": Object {
    "albums": Array [],
    "id": "ObjectId",
    "name": "Lana Del Rey",
  },
}
`;

exports[`Graphql API shoud save an artist 2`] = `
Object {
  "__v": 0,
  "_id": "ObjectId",
  "albums": Array [],
  "name": "Lana Del Rey",
}
`;

exports[`Graphql API shoud update an artist 1`] = `
Object {
  "updateArtist": Object {
    "albums": Array [],
    "id": "ObjectId",
    "name": "Lana Del Rey (Queen of the Universe)",
  },
}
`;

exports[`Graphql API shoud update an artist 2`] = `
Object {
  "__v": 0,
  "_id": "ObjectId",
  "albums": Array [],
  "name": "Lana Del Rey (Queen of the Universe)",
}
`;

exports[`Graphql API should delete an artist 1`] = `
Object {
  "deleteArtist": Object {
    "albums": Array [],
    "id": "ObjectId",
    "name": "Lana Del Rey",
  },
}
`;

exports[`Graphql API should delete an artist 2`] = `null`;

exports[`Graphql API should retrieve an artist 1`] = `
Object {
  "artist": Object {
    "albums": Array [],
    "id": "ObjectId",
    "name": "Lana Del Rey",
  },
}
`;

exports[`Model should delete an artist 1`] = `
Object {
  "__v": 0,
  "_id": "ObjectId",
  "albums": Array [],
  "name": "Lana Del Rey",
}
`;

exports[`Model should not save an empty artist 1`] = `[ValidationError: Artist validation failed: name: Path \`name\` is required.]`;

exports[`Model should retrieve an artist 1`] = `
Object {
  "__v": 0,
  "_id": "ObjectId",
  "albums": Array [],
  "name": "Lana Del Rey",
}
`;

exports[`Model should save new artist 1`] = `
Object {
  "__v": 0,
  "_id": "ObjectId",
  "albums": Array [],
  "name": "Lana Del Rey",
}
`;
